# staticlib_websocket

./: .travis.yml  CMakeLists.txt  README.md  appveyor.yml
docs/html/: annotated.html  classes.html  classstaticlib_1_1websocket_1_1frame-members.html  classstaticlib_1_1websocket_1_1frame.html  classstaticlib_1_1websocket_1_1masked__payload__source-members.html  classstaticlib_1_1websocket_1_1masked__payload__source.html  dir_831274332ea70d31addd984a718c4958.html  dir_c33d3ca81783b96de1fd366e75cb14d0.html  files.html  frame_8hpp.html  frame_8hpp_source.html  frame__type_8hpp.html  frame__type_8hpp_source.html  functions.html  functions_func.html  handshake_8hpp.html  handshake_8hpp_source.html  index.html  masked__payload__source_8hpp.html  masked__payload__source_8hpp_source.html  namespacemembers.html  namespacemembers_enum.html  namespacemembers_func.html  namespaces.html  namespacestaticlib.html  namespacestaticlib_1_1websocket.html  namespacestaticlib_1_1websocket_1_1handshake.html  websocket_8hpp.html  websocket_8hpp_source.html
docs/html/search/: all_66.js  all_68.js  all_6d.js  all_70.js  all_72.js  all_73.js  all_74.js  classes_66.js  classes_6d.js  enums_66.js  files_66.js  files_68.js  files_6d.js  functions_64.js  functions_66.js  functions_68.js  functions_69.js  functions_6d.js  functions_6f.js  functions_73.js  namespaces_73.js  search.js
include/staticlib/: websocket.hpp
include/staticlib/websocket/: frame.hpp  frame_type.hpp  handshake.hpp  masked_payload_source.hpp
test/: CMakeLists.txt  frame_test.cpp  handshake_test.cpp
